--- a/content/chap04.tex
+++ b/content/chap04.tex
@@ -19,8 +19,8 @@
 \par
 在TCP-Reno中，对于重复ACK采取的是快速重传的方法。以图\ref{FR_EPS}为例，源端的NC层在收到3个对$p_2$的ACK之后，直接将其交付给上层TCP。上层TCP收到3个重复的对$p_2$的ACK，认为报文$p_2$丢失了，采取快速重传，只重传$p_2$，然后进入拥塞避免阶段，继续接着$p_{10}$发送$p_{11}$。接收端在收到$p_2$的重传报文$C\left[11\right]$后，又陆续回给源端多个重复ACK，表示$p_3$丢失。源端TCP又启动快速重传，重传报文$p_3$。后面对报文$p_4$的重传和$p_1$，$p_2$的情况一样。当编码窗口和RTT比较大时，这种一个RTO内的突发丢包对性能的损失更大。
 \par
-TCP-Reno对于一个RTO内报文的连续丢失采取的是单个依次重传的处理策略，因此对突发丢包不是很友好。NC层的引入让这一策略的劣势更为凸显。当NC层出现重复ACK时，意味着链路中出现的丢包就绝不仅仅是单个报文的丢失，这是由于NC层的“seen”机制导致的。直觉上，由于NC层缓存有未被确认的数据包，我们可以在NC层重传那些未被看到的报文。当NC层收到第一个从TCP层下来的重传报文\emph{pkt}后，NC层不仅重传\emph{pkt}，而是会在一个RTT内顺便将所有未看到的报文都重传。如此，可以让上层TCP认为仅仅就丢了一个包。如图\ref{NEWFR_EPS}所示，NC层收到上层TCP的重传报文$p_2$后，在一个RTT内重传了未看到的报文$p_2$，$p_3$和$p_4$。
-\begin{figure}[htbp]
+
+\begin{figure}[htbp]TCP-Reno对于一个RTO内报文的连续丢失采取的是单个依次重传的处理策略，因此对突发丢包不是很友好。NC层的引入让这一策略的劣势更为凸显。当NC层出现重复ACK时，意味着链路中出现的丢包就绝不仅仅是单个报文的丢失，这是由于NC层的“seen”机制导致的。直觉上，由于NC层缓存有未被确认的数据包，我们可以在NC层重传那些未被看到的报文。当NC层收到第一个从TCP层下来的重传报文\emph{pkt}后，NC层不仅重传\emph{pkt}，而是会在一个RTT内顺便将所有未看到的报文都重传。如此，可以让上层TCP认为仅仅就丢了一个包。如图\ref{NEWFR_EPS}所示，NC层收到上层TCP的重传报文$p_2$后，在一个RTT内重传了未看到的报文$p_2$，$p_3$和$p_4$。
 	\centering
 	\includegraphics[width=4in]{figures/fr.eps}
 	\caption{原有TCP/NC的重传机制}
@@ -164,7 +164,7 @@ R_{new}=a*\frac{1}{1-\rho}+b*R_{old},0 \le a,b \le 1,a+b=1
 \section{固定编码系数码本}
 原有TCP/NC协议的编码数据包系数是在某个有限域上的随机数。选定有限域越大，解码成功率越大。根据文献\cite{4015738}所述，当选定的有限域为$GF\left(2^8\right)$时，解码成功率超过$99.6\%$。但有限域越大，有限域上的运算要么耗时长，要么查表消耗内存过大。选定$GF\left(2^8\right)$是个折中的选择。在$GF\left(2^8\right)$下，每个系数是一个字节，当编码窗口比较大时，NC头部的系数是一大笔开销。
 \par
-借用本文第\ref{sec:newnc}小节中为前向重传机制设置的Pid字段，本文在发送端固定系数码本，以减小头部开销。采用编码码本的思路在文献\cite{宋蒙2015基于网络编码的}中有提到，与之不同的是，本文系数码本为范德蒙矩阵，其任意\emph{n}行子集都是线性无关的。本文固定编码窗口为5，其编码系数码本\emph{vand\_matrix}为一个$254 \times 5$的矩阵：
+借用本文第\ref{sec:newnc}小节中为前向重传机制设置的Pid字段，本文在发送端固定系数码本，以减小头部开销。采用编码码本的思路在文献\cite{songmeng2015jiyu}中有提到，与之不同的是，本文系数码本为范德蒙矩阵，其任意\emph{n}行子集都是线性无关的。本文固定编码窗口为5，其编码系数码本\emph{vand\_matrix}为一个$254 \times 5$的矩阵：
 \begin{equation}
 	vand\_matrix=\left[ {\begin{array}{*{20}{c}}
 		{0x01}&{0x01}&{0x01}&{0x01}&{0x01}\\
