--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -376,7 +376,7 @@ networks random bit error rate (BER) is negligible, and con-},
   keywords  = {automatic repeat request;broadcast channels;channel coding;decoding;linear codes;queueing theory;stochastic processes;telecommunication network management;ARQ scheme;block-by-block approach;drop-when-decoded algorithm;drop-when-seen algorithm;encoding process;linear network coding algorithm;link-by-link feedback;packet erasure broadcast channel;queue management algorithm;stochastic arrival;Automatic repeat request;Broadcasting;Communication networks;Decoding;Delay;Feedback;Laboratories;Network coding;Telecommunication network reliability;Throughput, rank5},
 }
 
-@Book{梅达尔2014网络编码基础与应用,
+@Book{meidaer2014,
   title     = {网络编码基础与应用},
   publisher = {机械工业出版社},
   year      = {2014},
@@ -538,7 +538,7 @@ networks random bit error rate (BER) is negligible, and con-},
   howpublished = {\url{https://en.wikipedia.org/wiki/Raspberry_Pi}},
 }
 
-@Book{linux网络技术内幕,
+@Book{linuxneimu,
   title     = {深入理解Linux网络技术内幕},
   publisher = {中国电力出版社},
   year      = {2009},
@@ -756,7 +756,7 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   file     = {:TCP NC 在Linux下的实现及改进.pdf:PDF},
 }
 
-@Article{张三峰2013编码,
+@Article{zhangsanfeng,
   author  = {张三峰 and 李爽 and 蓝翔 and 胡永东},
   title   = {编码TCP的建模与性能分析},
   journal = {通信学报},
@@ -766,7 +766,7 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   file    = {:编码TCP的建模和性能分析.pdf:PDF},
 }
 
-@Masterthesis{李永超2015基于网络编码,
+@Masterthesis{liyongchao,
   author   = {李永超},
   title    = {基于网络编码TCP协议的网络加速系统的设计与实现},
   year     = {2015},
@@ -775,7 +775,7 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   school   = {北京邮电大学},
 }
 
-@Masterthesis{宋蒙2015基于网络编码的,
+@Masterthesis{songmeng2015jiyu,
   author   = {宋蒙},
   title    = {基于网络编码的TCP协议原型设计与实现},
   year     = {2015},
@@ -784,7 +784,7 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   school   = {北京邮电大学},
 }
 
-@Masterthesis{翟丰泰2015基于网络编码的,
+@Masterthesis{zaifengtai,
   author   = {翟丰泰},
   title    = {基于网络编码的TCP协议(NCTCP)设计与研究},
   year     = {2015},
@@ -793,7 +793,7 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   school   = {西安电子科技大学},
 }
 
-@Masterthesis{穆甜2015面向无线网络的网络编码,
+@Masterthesis{mutian,
   author   = {穆甜},
   title    = {面向无线网络的网络编码TCP仿真与关键技术研究},
   year     = {2015},
@@ -802,7 +802,7 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   school   = {北京邮电大学},
 }
 
-@Masterthesis{张鸿云2013基于网络编码的新型无线传输协议研究与实现,
+@Masterthesis{zhanghongyun,
   author   = {张鸿云},
   title    = {基于网络编码的新型无线传输协议研究与实现},
   year     = {2013},
@@ -907,7 +907,7 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   pages  = {396-407},
 }
 
-@Article{潘凯2014有损网络下的高性能传输控制协议研究,
+@Article{pankai,
   author  = {潘凯 and 李挥},
   title   = {有损网络下的高性能传输控制协议研究},
   journal = {通信学报},
