--- a/preface/cabstract.tex
+++ b/preface/cabstract.tex
@@ -6,65 +6,11 @@
 {
 	%%写完对照摘要要求，看是否合适
 	%%可以写本文的主要工作包括。。。。
-	无人机一般工作在室外空域，
-	具有移动性高的特点，
-	这决定了其经常面临大尺度衰落信道环境，
-	数据链路错包、丢包频繁。
-	因此，基于传输层协议（ TCP ） 的无人机视频传输面临着吞吐率受限、时延较大的问题。
-	这一问题很大程度上又是因为TCP协议本身的设计导致的。
+无人机一般工作在室外空域，具有移动性高的特点，这决定了其经常面临大尺度衰落信道环境，数据链路错包、丢包频繁。因此，基于传输层协议（TCP）的无人机视频传输面临着吞吐率受限、时延较大的问题。这一问题很大程度上又是因为TCP协议本身的设计导致的。
 	\par
-	TCP协议中，接收端通过反馈ACK来告诉发送端某个报文的丢失，
-	然后发送端据此重传相应的报文。
-	对于无人机视频传输等实时性要求很高的应用来说，
-	丢包反馈重传耗时太长。
-	不仅如此，
-	TCP将丢包看做是链路出现拥塞的标志，
-	然后启动相应的拥塞控制算法，
-	降低传输速率。
-	考虑到有线网络中极低的误码率、拥塞是丢包的主要原因，
-	这一机制是适用的。
-	然而对于无人机来说，
-	由于天气、障碍物、多径干扰等各种因素，
-	TCP丢包率比在有线网络中大得多，
-	且丢包多由遮挡、传输错误导致。
-	传统TCP无法鉴别拥塞丢包和非拥塞丢包，
-	不分区别地频繁启动拥塞控制算法，
-	降低数据发送速率，
-	将导致TCP无法充分利用可用带宽，
-	减小无人机视频传输的速率，
-	增大传输时延。
-	有必要改进标准TCP协议以提高基于TCP协议的无人机视频传输的性能。
-	网络编码的出现对于解决这一问题给出了一个思路。
-	通过在发送端冗余编码，
-	可以一定程度掩盖链路中出现的丢包，
-	从而提高数据传输的速度，
-	降低时延。
+TCP协议中，接收端通过反馈ACK来告诉发送端某个报文的丢失，然后发送端据此重传相应的报文。对于无人机视频传输等实时性要求很高的应用来说，丢包反馈重传耗时太长。不仅如此，TCP将丢包看做是链路出现拥塞的标志，然后启动相应的拥塞控制算法，降低传输速率。考虑到有线网络中极低的误码率、拥塞是丢包的主要原因，这一机制是适用的。然而对于无人机来说，由于天气、障碍物、多径干扰等各种因素，TCP丢包率比在有线网络中大得多，且丢包多由遮挡、传输错误导致。传统TCP无法鉴别拥塞丢包和非拥塞丢包，不分区别地频繁启动拥塞控制算法，降低数据发送速率，将导致TCP无法充分利用可用带宽，减小无人机视频传输的速率，增大传输时延。有必要改进标准TCP协议以提高基于TCP协议的无人机视频传输的性能。网络编码的出现对于解决这一问题给出了一个思路。通过在发送端冗余编码，可以一定程度掩盖链路中出现的丢包，从而提高数据传输的速度，降低时延。
 	\par
-	本文分析了基于TCP协议的无人机视频传输所面临的问题，
-	并指出问题核心是TCP协议在面对有损信道时的低效。
-	对近些年来改善有损信道中TCP性能的相关工作进行了梳理。
-	介绍了网络编码原理，
-	尤其是随机线性网络编码。
-	对于batch-coding和pipeline-coding进行了比较，
-	结合无人机视频传输应用场景，
-	分析了其优缺点。
-	在以上基础上，
-	设计实现了流水线编码TCP协议，
-	并将其移植入嵌入式设备。
-	在模拟丢包网络中，
-	对流水线编码TCP进行性能测试，
-	与TCP-Reno协议进行性能对比。
-	%%分析影响其性能的关键因素。
-	在了解编码TCP协议不足的基础上，
-	对其做了进一步改进，
-	以更好地适应无人机视频传输应用场景。
-	提出了前向重传机制以应对一个RTO内的突发丢包；
-	提出了一种新的自适应冗余度算法以应对网络的变化；
-	对冗余包的发送时机给出改进以降低平均解码时延；
-	设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；
-	改进编码系数的设定以降低首部开销。
-	最后，本文搭建了无人机视频传输实验平台，
-	验证改进后的编码TCP协议对无人机视频传输性能的提高。
+本文分析了基于TCP协议的无人机视频传输所面临的问题，并指出问题核心是TCP协议在面对有损信道时的低效。对近些年来改善有损信道中TCP性能的相关工作进行了梳理。介绍了网络编码原理，尤其是随机线性网络编码。对于batch-coding和pipeline-coding进行了比较，结合无人机视频传输应用场景，分析了其优缺点。在以上基础上，设计实现了流水线编码TCP协议，并将其移植入嵌入式设备。在模拟丢包网络中，对流水线编码TCP进行性能测试，与TCP-Reno协议进行性能对比。在了解编码TCP协议不足的基础上，对其做了进一步改进，以更好地适应无人机视频传输应用场景。提出了前向重传机制以应对一个RTO内的连续丢包；提出了一种新的自适应冗余度算法以应对网络的变化；设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；改进编码系数的设定以降低首部开销。最后，本文搭建了无人机视频传输实验平台，验证改进后的编码TCP协议对无人机视频传输性能的提高。
 	\par
 	
 }
