改到第三章了

--- a/THUBeamer-master/ppt01.tex
+++ b/THUBeamer-master/ppt01.tex
@@ -159,7 +159,7 @@
 	\begin{enumerate}
 		\item 分析基于TCP协议的无人机视频传输面临的问题。
 		\item 介绍网络编码相关理论，及将网络编码应用于提高网络吞吐率、鲁棒性的相关工作。重点分析了编码TCP协议的原理、优势。
-		\item 设计实现编码TCP协议，并将其部署于嵌入式板子Raspberry Pi上，测试分析其性能。
+		\item 基于流水线编码思想，设计实现编码TCP协议，并将其部署于嵌入式板子Raspberry Pi上，测试分析其性能。
 		\item 针对编码TCP存在的问题，对其作出若干改进，以更好地适应无人机视频传输环境。
 	\end{enumerate}
 \end{frame}
