--- a/THUBeamer-master/ppt05.tex
+++ b/THUBeamer-master/ppt05.tex
@@ -41,17 +41,17 @@
 }
     
 \section{Q\&A}
-    \frame{
-%      \frametitle{\secname}
-      \begin{block}{致谢}
-        \begin{enumerate}[(1)]
-          \item 导师陈庆春老师的精心指导；
-          \item 教研室各位同学三年来对我的帮助；
-          \item 教研室各个项目的历练；
-          \item XX老师、XX老师的评审及意见，答辩委员会老师聆听和指导。
-        \end{enumerate}
-      \end{block}
-    }
+%    \frame{
+%%      \frametitle{\secname}
+%      \begin{block}{致谢}
+%        \begin{enumerate}[(1)]
+%          \item 导师陈庆春老师的精心指导；
+%          \item 教研室各位同学三年来对我的帮助；
+%          \item 教研室各个项目的历练；
+%          \item 张家树老师、王宏霞老师、唐慧佳老师、邸志雄老师和赵宏宇老师的聆听和指导
+%        \end{enumerate}
+%      \end{block}
+%    }
     \frame{
       \frametitle{Q \& A}
       \begin{block}{Questions?}
